# vision-pipeline

./: .gitignore  Dockerfile  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: dataset.ipynb  interpretability.ipynb
reports/: day_1_report.md  day_2_report.md  day_3_report.md  day_4_report.md  day_5_report.md  day_6_report.md  day_7_report.md  final_report.md  transfer_learning_experiments.md
src/: api.py  benchmark_latency.py  check_calibration.py  export_onnx.py  infer_intel.py  inspect_transfer_slices.py  test_intel.py  train.py  train_intel.py  train_severstal.py  validate_dataset.py
src/configs/: intel_augmented_adam_cosine_1.py  intel_augmented_adam_cosine_10.py  intel_augmented_adam_cosine_2.py  intel_augmented_adam_cosine_3.py  intel_augmented_adam_cosine_4.py  intel_augmented_adam_cosine_5.py  intel_augmented_adam_cosine_6.py  intel_augmented_adam_cosine_7.py  intel_augmented_adam_cosine_8.py  intel_baseline_adam_cosine.py  intel_resnet50_transfer_1.py  intel_resnet50_transfer_2.py  intel_resnet50_transfer_3.py  intel_resnet50_transfer_4.py  intel_resnet50_transfer_5.py  intel_vit_transfer_1.py  intel_vit_transfer_2.py  intel_vit_transfer_3.py  intel_vit_transfer_4.py
src/core/: checkpoint.py
src/data/: dataset.py  labels.py  split.py  statistics.py
src/inference/: __init__.py  prediction.py  validation.py
src/models/: basic_cnn.py
src/training/: config.py
tests/: test_api.py  test_prediction.py  test_validation.py
