[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-pipeline"
version = "0.1.0"
description = "End-to-end computer vision pipeline for Intel scene classification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "matplotlib",
    "pandas",
    "pillow",
    "scikit-learn",
    "scikit-multilearn",
    "jupyter",
    "ipywidgets",
    "wandb",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "onnx",
    "onnxscript",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
